Added Right click menu for Jobs in that region
